[package]
name = "Wad"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.21.0"
eframe = { version = "0.21.3", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "wgpu",
    "persistence",   # Enable restoring app state when restarting the app.
] }
egui_glow = "0.21.0"
glow = "0.12"
env_logger = "0.10"
bbwad = { path = "./lib/bbwad" }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.61", features = ["BlobPropertyBag", "Url", "HtmlAnchorElement", "FileReader", "Request", "RequestInit", "RequestMode", "Response", "Window"] }
js-sys = "0.3.61"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
