[package]
name = "hlfiles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bmp = "0.5.0"
bytebuffer = "2.1.1"
bytemuck = "1.13.1"
egui = "0.21.0"
image = "0.24.6"
imagequant = "4.2.0"
js-sys = "0.3.61"
rgb = "0.8.36"
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.61", features = ["FilePropertyBag", "BlobPropertyBag", "Url", "HtmlAnchorElement", "HtmlLinkElement", "FileReader", "Request", "RequestInit", "RequestMode", "Response", "Window"] }
